change select to use word-wrap normal, fixes undesirable selects with long strings

--- a/core/sass/formplate/_select.scss
+++ b/core/sass/formplate/_select.scss
@@ -62,6 +62,7 @@
 			@include text-size(14px);
 			text-transform: none;
 			word-spacing: normal;
+			word-wrap: normal;
 			outline: none;
 			-webkit-user-select: text;
 			-webkit-font-smoothing: antialiased;
